Changes on 06/27/23 Was encountering issue where vertical space between highest and lowest points of wave pattern at top of footer was revealing background color in certain viewports. Solution choosing a different wave pattern with shallower "peaks" and adding a "wet sand" div beneath the gradient to fill in the gaps. Did further adjustments on heights and margins for divs below the playing grid. Page is now more responsive and looks good on my desktop and various mobile devices.

--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@ body {
     }
 
 #mainContainer  {
+    min-height: calc(100vh - 1000px);
+    
     width: 100%;
-    max-height: 100%;
+    
     text-align: center;
     align-content: center;
     margin-top: 0.5rem
@@ -18,7 +20,7 @@ body {
     margin: auto;
     border-top-color: rgb(167, 132, 86);
     border-top-style: solid;
-    border-top-width: 3px;    
+    border-top-width: 3px; 
 }
 
 #title  {
@@ -47,7 +49,7 @@ h1  {
     }
 
 #content {
-    min-height: calc(100vh - 305.758px);
+    
     align-content: center;
     border-color: rgb(167, 132, 86);
     border-style: solid;
@@ -198,37 +200,48 @@ h3  {
 .foundTreasuresBar {
     position: relative;
     width: 100%;
-    height: 6rem;
-    background-image: linear-gradient(to top, #755c3e 0%, #deb887 100%);
-    margin-bottom: 0rem;
+    background-image: linear-gradient(to top, #755c3e 0%, rgb(222, 184, 135) 100%);
     border-top: 1px solid rgba(210, 180, 140, 0.3);
     -webkit-background-clip: padding-box;
         background-clip: padding-box; 
-
+    min-height: 17vh;
+    max-height: 17vh;
     z-index: -1;
     }
 
+#wetSandBar {
+    width: 100%;
+    background-color: #755c3e;
+    height: 25vh;
+    z-index: -1;
+    margin-top: -0.1rem;
+    margin-bottom: -16rem;
+}
+
 svg {
-    margin-top: -5rem;
+    
     z-index: 1;
+    border-bottom: 1px solid #68e0cf(210, 180, 140, 0.3);
     }
 
 footer {
     background-image: linear-gradient(to top, #209cff 0%, #68e0cf 100%);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-top: -1rem;
-    height: 15rem;
+    height: 30vh;
+    z-index: 1;
     }
 
 #socials {
     text-align: center;
     margin: auto;
+    padding-top: 4rem;
     clear: both
     }
 
 #credit {
     background-color:rgb(255, 255, 255);
-    width: 50%;
+    width: 10rem;
     text-align: center; 
     margin: auto;
     font-weight: bold;
